--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,7 @@
     </script>
 
     <script type="module" src="../wise-shopping-cart.js"></script>
+    <script type="module" src="../wise-shopping-cart-item.js"></script>
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
