demo snippet added

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,15 @@
   </head>
   <body>
     <div class="vertical-section-container centered" >
-          <wise-shopping-cart></wise-shopping-cart>
+      <div class="vertical-section-container centered">
+        <h3>Basic demo-element demo</h3>
+        <demo-snippet>
+          <template>
+            <wise-shopping-cart></wise-shopping-cart>
+
+          </template>
+        </demo-snippet>
+      </div>
     </div>
   </body>
 </html>
