--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
       import '@polymer/iron-demo-helpers/demo-snippet';
     </script>
 
-    <script type="module" src="../wise-shopping-cart.js"></script>
+    <script type="module" src="../demo-wise-shopping-cart.js"></script>
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
@@ -24,16 +24,6 @@
     </custom-style>
   </head>
   <body>
-    <div class="vertical-section-container centered" >
-      <div class="vertical-section-container centered">
-        <h3>Basic demo-element demo</h3>
-        <demo-snippet>
-          <template>
-            <wise-shopping-cart></wise-shopping-cart>
-
-          </template>
-        </demo-snippet>
-      </div>
-    </div>
+     <demo-wise-shopping-cart></demo-wise-shopping-cart>
   </body>
 </html>
